unpackaged/main/default/objects/LeadDistributionRule__c/LeadDistributionRule__c.object-meta.xml
<CustomObject>
    <label>Lead Distribution Rule</label>
    <nameField>
        <label>Lead Distribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Distribution Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>