unpackaged/main/default/objects/LeadDistributionRule__c/fields/Has_Not_Supported_SubQuery__c.field-meta.xml
<CustomField>
    <fullName>Has_Not_Supported_SubQuery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Not Supported Sub Query</label>
    <type>Checkbox</type>
</CustomField>