unpackaged/main/default/objects/LeadDistributionRule__c/fields/Logic__c.field-meta.xml
<CustomField>
    <fullName>Logic__c</fullName>
    <label>Logic</label>
    <length>150</length>
    <type>Text</type>
</CustomField>