unpackaged/main/default/objects/LeadDistributionRule__c/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <label>Order By</label>
    <length>150</length>
    <type>Text</type>
</CustomField>