unpackaged/main/default/objects/LeadDistributionRule__c/fields/Return_Field__c.field-meta.xml
<CustomField>
    <fullName>Return_Field__c</fullName>
    <label>Return Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>