unpackaged/main/default/objects/LeadDistributionRule__c/fields/Return_Object__c.field-meta.xml
<CustomField>
    <fullName>Return_Object__c</fullName>
    <label>Return Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>