unpackaged/main/default/objects/LeadDistributionRule__c/fields/Sorting_Direction__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Direction__c</fullName>
    <label>Sorting Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>