unpackaged/main/default/objects/LeadDistributionRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>IsActive__c</columns>
    <columns>Has_Not_Supported_SubQuery__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>